@@ -33,9 +33,6 @@ t/data/element3.sgml
 t/data/element4.sgml
 t/data/element5.sgml
 t/data/element6.sgml
-t/data/element7.sgml
-t/data/element8.sgml
-t/data/element9.sgml
 t/data/end_element1.sgml
 t/data/end_element2.sgml
 t/data/instruction1.sgml
@@ -62,6 +59,9 @@ t/data/start_element19.sgml
 t/data/start_element20.sgml
 t/data/start_element21.sgml
 t/data/start_element22.sgml
+t/data/start_element23.sgml
+t/data/start_element24.sgml
+t/data/start_element25.sgml
 t/data/xml1.sgml
 t/SGML-PYX/01-use.t
 t/SGML-PYX/02-version.t
