@@ -1,11 +1,9 @@
 use strict;
 use warnings;
 
-use English;
-use Error::Pure::Utils qw(clean);
 use File::Object;
 use SGML::PYX;
-use Test::More 'tests' => 10;
+use Test::More 'tests' => 7;
 use Test::NoWarnings;
 use Test::Output;
 
@@ -107,41 +105,3 @@ stdout_is(
 	$right_ret,
 	'Test simple element with attribute which has value with space.',
 );
-
-# Test.
-$obj = SGML::PYX->new;
-$right_ret = <<'END';
-(element
-Aattr val val
-END
-stdout_is(
-	sub {
-		$obj->parsefile($data_dir->file('element7.sgml')->s);
-		return;
-	},
-	$right_ret,
-	'Test element with attribute which has value with space.',
-);
-
-# Test.
-$obj = SGML::PYX->new;
-$right_ret = <<'END';
-(element
-Aa value
-END
-stdout_is(
-	sub {
-		$obj->parsefile($data_dir->file('element8.sgml')->s);
-		return;
-	},
-	$right_ret,
-	'Test element with attribute which has name only one character length.',
-);
-
-# Test.
-$obj = SGML::PYX->new;
-eval {
-	$obj->parsefile($data_dir->file('element9.sgml')->s);
-};
-is($EVAL_ERROR, "Problem with attribute parsing.\n", 'Bad attribute name.');
-clean();
